# lbs_affine_decomposition

./: .gitignore  CMakeLists.txt  README.md  ZPsi.streamop  ZPsi.top  ZPsi.totalop  main.cc
LinearBoltzmannSolver/AffineDecomposition/: affdecomp_00_constrdestr.cc  affdecomp_01_initialize.cc  affdecomp_02_readpodmodes.cc  affdecomp_03a_totaloperator.cc  affdecomp_03b_transferoperator.cc  affdecomp_03c_streamingoperator.cc  affine_decompositioner.h
LinearBoltzmannSolver/AffineDecomposition/lua/: ad_create.cc  ad_utils.cc  lua_register.h
Tests/: Transport2D_1Poly_AffDecompTest.lua  Transport2D_1Poly_PsiTest.lua
